--- a/templates/adopt/adopt.css
+++ b/templates/adopt/adopt.css
@@ -1,6 +1,9 @@
+main .section {
+  padding-top: 0;
+}
 body.adopt .hero h1 {
   font-family: Raleway;
-  font-size: 48px;
+  font-size: 49px;
   font-style: normal;
   font-weight: 700;
   line-height: normal;
@@ -8,16 +11,20 @@ body.adopt .hero h1 {
   color: #000;
 }
 @media (min-width: 1024px) {
+  main .section {
+    padding-top: 40px;
+  }
+
   body.adopt .hero h1 {
     font-size: 72px;
   }
 }
 body.adopt .hero h2 {
-  font-family: Raleway;
-  font-size: 32px;
+  font-family: "Libre Franklin";
+  font-size: 22px;
   font-style: normal;
-  font-weight: 500;
-  line-height: 36px; /* 112.5% */
+  font-weight: 400;
+  line-height: 26px;
   letter-spacing: -0.64px;
   color: #000;
 }
